// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions handleUsageBanner should dispatch notify if there is a notification 1`] = `
[
  {
    "payload": {
      "allowHTML": false,
      "buttons": [],
      "closeButton": false,
      "dismissAfter": 0,
      "dismissible": false,
      "id": "99",
      "message": "new notification test",
      "onClick": [Function],
      "position": "top-center",
      "status": "warning",
      "style": "banner",
    },
    "type": "reapop/upsertNotification",
  },
]
`;

exports[`actions handleUsageBanner should hide and dispatch notify if there is a notification and status change 1`] = `
[
  {
    "payload": "99",
    "type": "reapop/dismissNotification",
  },
  {
    "payload": {
      "allowHTML": false,
      "buttons": [],
      "closeButton": false,
      "dismissAfter": 0,
      "dismissible": false,
      "id": "99",
      "message": "new notification test",
      "onClick": [Function],
      "position": "top-center",
      "status": "warning",
      "style": "banner",
    },
    "type": "reapop/upsertNotification",
  },
]
`;

exports[`actions handleUsageBanner should hide the banner if the status has changed 1`] = `
[
  {
    "payload": "99",
    "type": "reapop/dismissNotification",
  },
]
`;

exports[`actions handleUsageBanner should not do anything if no notification and status has not changed 1`] = `[]`;
